--- a/.net/unit-tests/.net-unit-tests.md
+++ b/.net/unit-tests/.net-unit-tests.md
@@ -1,5 +1,8 @@
 # .NET Unit Tests
 
-- NUnit
-- XUnit
-- Running unit tests in VS.NET / VS Code vs on the Build Server
+## NUnit
+NUnit Command line runner - https://nunit.org/docs/2.4.6/consoleCommandLine.html
+
+## XUnit
+
+## Running unit tests in VS.NET / VS Code vs on the Build Server
