--- a/roadmap/.net-full-stack-developer-mvp.md
+++ b/roadmap/.net-full-stack-developer-mvp.md
@@ -24,6 +24,9 @@
 
 ### .NET Framework: MVC, API
 ### .NET Core: MVC, API
+### Logging & Monitoring
+- ILogger
+- Serilog
 ### OpenAPI / Swashbuckle
 ### RabbitMQ
 ### Go
@@ -40,7 +43,6 @@
 - MongoDB
 
 ## Platform
-### SeriLog
 ### ELK Stack
 #### Kibana
 - Kibana queries
