--- a/roadmap/.net-full-stack-developer-mvp.md
+++ b/roadmap/.net-full-stack-developer-mvp.md
@@ -8,7 +8,8 @@
 - ES5
 - ES6
 - React
-- Angular.JS / Angular
+- Angular.JS
+- Angular 2+
 ### Other Client-Side Frameworks & Libraries
 - Bootstrap
 - CSS
