--- a/roadmap/.net-full-stack-developer-mvp.md
+++ b/roadmap/.net-full-stack-developer-mvp.md
@@ -74,6 +74,14 @@
 - Bash
 - PowerShell
 
+## Software Engineering Principles
+- DRY, YAGNI
+### OOP
+- SOLID
+- Functional Programming
+- Dynamic Programming
+- Imperative vs Declarative Paradigms
+
 ## CompSci
 ### Algorithms
 
