--- a/roadmap/.net-full-stack-developer-mvp.md
+++ b/roadmap/.net-full-stack-developer-mvp.md
@@ -84,7 +84,13 @@
 
 ## CompSci
 ### Algorithms
-
 ### Data Structures
-
 ### Well-Known Problems
+### Operating Systems
+#### Program Execution
+##### Compilers
+- compiler, linker, loader
+- abstract syntax tree
+- parser
+#### Memory structures
+- stack frame, heap
