--- a/.net/unit-tests/.net-unit-tests.md
+++ b/.net/unit-tests/.net-unit-tests.md
@@ -1,8 +1,12 @@
 # .NET Unit Tests
 
+## Test Definitions
+- http://blog.cleancoder.com/uncle-bob/2017/05/05/TestDefinitions.html
+
 ## NUnit
 NUnit Command line runner - https://nunit.org/docs/2.4.6/consoleCommandLine.html
 
 ## XUnit
+- https://xunit.github.io/docs/why-did-we-build-xunit-1.0.html
 
 ## Running unit tests in VS.NET / VS Code vs on the Build Server
