--- a/.net/unit-tests/.net-unit-tests.md
+++ b/.net/unit-tests/.net-unit-tests.md
@@ -6,8 +6,16 @@
 ## NUnit
 NUnit Command line runner - https://nunit.org/docs/2.4.6/consoleCommandLine.html
 
-## XUnit
+## xUnit
 - https://xunit.net/docs/why-did-we-build-xunit-1.0, https://xunit.github.io/docs/why-did-we-build-xunit-1.0.html
 - https://dev.to/hatsrumandcode/net-core-2-why-xunit-and-not-nunit-or-mstest--aei
+- https://xunit.net/
+
+## BDD (with xBehave, xUnit)
+- https://testertina.medium.com/a-beginners-guide-to-test-frameworks-d45234bced4a
+- https://www.chadly.net/bdd-with-xunit-net/
+- https://code.4noobz.net/bdd-tests-with-xbehave-and-xunit/
+- https://github.com/adamralph/xbehave.net/wiki/Quick-start
+- https://github.com/ttutisani/Xunit.Gherkin.Quick
 
 ## Running unit tests in VS.NET / VS Code vs on the Build Server
